--- a/frontend/src/app/components/mail/compose-box/compose-box.component.html
+++ b/frontend/src/app/components/mail/compose-box/compose-box.component.html
@@ -1,18 +1,18 @@
 <div class = "compose-box" >
     <div>
         <label for="to">To</label><br>
-        <input name="to" placeholder="to" type="text" id="to">
+        <input name="to" placeholder="to" type="text" id="to" value = {{getto}}> 
     </div>
     <div>
         <label for="subject">Subject</label><br>
-        <input name="subject-message" placeholder="Subject" type="text" id="subject-message">
+        <input name="subject-message" placeholder="Subject" type="text" id="subject-message" value={{getsubject}} >
     </div>
     <div>
         <label for="message">message</label><br>
-        <textarea type="text" placeholder="message.." rows="9"  id="message"></textarea>
+        <textarea type="text" placeholder="message.." rows="9"  id="message" value={{getmessage}}></textarea>
     </div>
     <div class="attach">
-        <select name="priority"  id="priority">
+        <select name="priority"  id="priority" value={{getpriority}}>
         <option selected disabled>choose priority</option>
         <option value=4>Very High</option>
         <option value=3>High</option>
@@ -20,7 +20,7 @@
         <option value=1>Low</option>
         </select>
         <div >
-        <input type="file" class="file"   multiple="multiple"  (change)="upload($event.target)">
+        <input type="file" class="file"   multiple="multiple"  (change)="upload($event.target)"  >
         </div>
     </div>
     <div>
