--- a/frontend/src/app/components/mail/filter-search/filter-search.component.html
+++ b/frontend/src/app/components/mail/filter-search/filter-search.component.html
@@ -18,18 +18,20 @@
         </div>
         <div class="priority-div">
             <span class="priority-slabel"><label for="priority">Priority</label></span>
-            <input type="range" list="tickmarks" step="1" formControlName="priority">
-            <datalist id="tickmarks">
-                <option value="0" label="very cold!"></option>
-                <option value="1" label="cool"></option>
-                <option value="2" label="medium"></option>
-                <option value="3" label="getting warm!"></option>
-                <option value="4" label="Very"></option>
-            </datalist>
+            <div>
+                <input type="range" list="tickmarks" step="25" formControlName="priority"/>
+                <datalist id="tickmarks">
+                    <option value="0">Poor</option>
+                    <option value="1">Low</option>
+                    <option value="2">Moderate</option>
+                    <option value="3">High</option>
+                    <option value="4">Urgent</option>
+                </datalist>
+            </div>
         </div>
         <div class="date-div">
             <span class="date-slabel"><label for="date">Date</label></span>
-            <select class="data-within-list" name="data-within-list">
+            <select class="data-within-list" name="data-within-list" formControlName="rangeDate">
                 <option value="1">1 day</option>
                 <option value="3">3 days</option>
                 <option value="7">1 week</option>
@@ -39,7 +41,7 @@
                 <option value="182">6 months</option>
                 <option value="365">1 year</option>
             </select>
-            <input type="date" class="start-date" name="birthday">
+            <input type="date" class="start-date" name="startDate">
         </div>
         <div class="attach-div">
             <span class="attach-slabel"><label for="attachment">Has attachment</label></span>
