--- a/frontend/src/app/components/signup/signup.component.html
+++ b/frontend/src/app/components/signup/signup.component.html
@@ -1,15 +1,15 @@
 <div class="layout">
     <div class="container">
-        <div class = "form-header">
+        <div class="form-header">
             <h2>Sign up</h2>
             <h3>Create your mail account</h3>
         </div>
-        <div class = "form-container">
-            <form class = "form" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div class="form-container">
+            <form class="form" [formGroup]="signupForm" (ngSubmit)="onSubmit()">
                 <div id="name" class="form-input">
                     <label for="firstName">First name</label><br>
                     <input type="text" id="first-name" formControlName="firstName">
-                    <label id="name-error" class = "error-label"></label>
+                    <label id="name-error" class="error-label"></label>
                 </div>
                 <div id="name" class="form-input">
                     <label for="lastName">Last name</label><br>
@@ -18,17 +18,18 @@
                 <div class="form-input">
                     <label for="username">Username</label><br>
                     <input type="text" id="username" formControlName="username">
-                    <label id="username-error" class = "error-label"></label>
+                    <label id="username-error" class="error-label"></label>
                 </div>
                 <div id="ppassword" class="form-input">
                     <label for="password">Password</label><br>
                     <input type={{visibility}} id="password" formControlName="password">
-                    <label id="password-error" class = "error-label"></label>
+                    <label id="password-error" class="error-label"></label>
                 </div>
                 <div id="ppassword" class="form-input">
                     <label>Confirm</label><br>
                     <input type={{visibility}} id="confirm-password">
-                    <password-strength-meter *ngIf="signupForm.value.password!.length > 0" class = "password-strength" [password]="signupForm.value.password"></password-strength-meter>
+                    <password-strength-meter *ngIf="signupForm.value.password!.length > 0" class="password-strength"
+                        [password]="signupForm.value.password"></password-strength-meter>
                 </div>
                 <div class="show-password">
                     <label>
