--- a/frontend/src/app/components/mail/filter-search/filter-search.component.html
+++ b/frontend/src/app/components/mail/filter-search/filter-search.component.html
@@ -19,7 +19,7 @@
         <div class="priority-div">
             <span class="priority-slabel"><label for="priority">Priority</label></span>
             <div>
-                <input type="range" list="tickmarks" min=0 max=4 step=1 formControlName="priority"/>
+                <input type="range" class="slider" list="tickmarks" min=0 max=4 step=1 formControlName="priority"/>
                 <datalist id="tickmarks">
                     <option [value]=0>All</option>
                     <option [value]=1>Low</option>
