--- a/frontend/src/app/components/mail/mail.component.css
+++ b/frontend/src/app/components/mail/mail.component.css
@@ -39,7 +39,7 @@
 .emails-container{
   position: sticky;
   overflow-y: auto;
-  max-height: 516px;
+  max-height: 546px;
 }
 
 .emails-container::-webkit-scrollbar {
@@ -215,7 +215,7 @@
   border: 1px;
 }
 
-.delete-button, .move-button, .left-nav-button, .right-nav-button, .filter-button{
+.delete-button, .move-button, .left-nav-button, .right-nav-button, .filter-button, .restore-button{
   display: inline-block;
   align-self: center;
   width: 40px;
@@ -365,7 +365,7 @@
   padding: 20px;
 }
 
-.refresh-button:hover, .add-contact-button:hover, .add-folder-button:hover, .select-button:hover, .delete-button:hover, .move-button:hover, .settings-button:hover, .logout-button:hover, .return-button:hover, .right-nav-button:hover, .left-nav-button:hover, .filter-button:hover,.search-button:hover{
+.refresh-button:hover, .add-contact-button:hover, .add-folder-button:hover, .select-button:hover, .delete-button:hover, .move-button:hover, .restore-button:hover, .settings-button:hover, .logout-button:hover, .return-button:hover, .right-nav-button:hover, .left-nav-button:hover, .filter-button:hover,.search-button:hover{
   background: white;
   color: var(--primary);
 }
@@ -574,13 +574,18 @@ tr:hover:not(.table-headers){
   padding: 10px 12px;
   text-decoration: none;
   display: block;
+  cursor: pointer;
+}
+
+input[type="radio"]:checked + .fsublist-div{
+  background-color: var(--extra);
+}
+
+input[type="radio"]:checked + .options-div{
+  background-color: var(--extra);
 }
 
 .dropdown-content a:hover {background-color: #ddd;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
 
 .dropdown-content:hover + .filter-button + .move-button{
   background: white;
