--- a/frontend/src/app/components/mail/compose-box/compose-box.component.html
+++ b/frontend/src/app/components/mail/compose-box/compose-box.component.html
@@ -1,18 +1,19 @@
 <div class = "compose-box">
     <form class = "form" [formGroup]="emailForm" (ngSubmit)="send()">
         <div>
-            <label for="to">To</label><br>
+            <label for="to"></label><br>
             <input name="to" placeholder="To" type="text" id="to" value={{to}}> 
         </div>
         <div>
-            <label for="subject">Subject</label><br>
+            <label for="subject"></label><br>
             <input name="subject" placeholder="Subject" type="text" id="subject" value={{subject}} formControlName="subject">
         </div>
         <div>
-            <label for="body">message</label><br>
+            <label for="body"></label><br>
             <textarea type="text" placeholder="Message..." rows="9"  id="body" value={{message}} formControlName="body"></textarea>
         </div>
         <div class="attach">
+            <label id = "pLabel">Priority</label>
             <select name="priority" id="priority" value={{priority}} formControlName="priority">
             <option selected disabled>choose priority</option>
             <option value=1>Low</option>
@@ -24,6 +25,7 @@
             <input type="file" class="file" multiple="multiple" (change)="upload($event.target)">
             </div>
         </div>
+        <label id = "errorLabel">Some usernames doesn't exist</label>
         <div>
             <input class="send" type="submit" value="Send">
             <input class="draft" (click)="saveToDraft()" value="Draft">
