--- a/frontend/src/app/components/mail/folder-box/folder-box.component.css
+++ b/frontend/src/app/components/mail/folder-box/folder-box.component.css
@@ -160,3 +160,9 @@
   padding: 0;
   border: 1px;
 }
+
+
+.info-slabel{
+    font-size: large!important;
+    color:var(--secondary)!important;
+  }
