--- a/frontend/src/app/components/mail/contact-box/contact-box.component.css
+++ b/frontend/src/app/components/mail/contact-box/contact-box.component.css
@@ -149,3 +149,9 @@
   padding: 0;
   border: 1px;
 }
+
+
+.info-slabel{
+    font-size: large!important;
+    color:var(--secondary)!important;
+  }
