--- a/frontend/src/app/components/mail/folder-box/folder-box.component.html
+++ b/frontend/src/app/components/mail/folder-box/folder-box.component.html
@@ -1,6 +1,6 @@
 <div class="folder-box" >
     <div class="info-div">
-        <span class="info-slabel" id="foldername">New Folder</span>
+        <span class="info-slabel" id="foldername"><label>New Folder</label></span>
         <button class="close-button" type = "button" (click)="closeFolderBox()"><span class="material-symbols-outlined">close</span></button>
     </div>
     <form [formGroup]="folderForm" (ngSubmit)="onSubmit($event)">
